# toy-project

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.sh  dly.sh  dump.cpp  dump.sh  gdb.sh  gen.cpp  gen.sh  inline.sh  llvm.sh  lower.sh  toy.sh
.cache/clangd/index/: dump.cpp.C7A4AE443C9A36B4.idx  gen.cpp.1B7394E1BD2E8123.idx  main.cpp.E98F3D47E31FF4CE.idx
simple-examples/inline/: inline.mlir  test.mlir  test.sh
test/: lit.cfg
test/right/: cse.mlir  final.mlir  func.mlir  loop.mlir  print-op-generic.sh
test/toy/: .lit_test_times.txt  affine-lowering.mlir  affine_lowering.mlir  ast.toy  codegen.toy  empty.toy  inline.toy  invalid.mlir  jit.toy  llvm.mlir  scalar.toy  shape_inference.mlir  transpose_transpose.toy  trivial_reshape.toy
toy/: CMakeLists.txt  README.md
toy/include/: CMakeLists.txt
toy/include/Dataflow/: lattice.h
toy/include/dly/: CMakeLists.txt  Dialect.h  Dly.td  DlyCombine.td  DlyDialect.td  DlyOps.td  MLIRGen.h  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td
toy/include/parser/: Parser.h
toy/include/toy/: CMakeLists.txt  Toy.td  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td  ToyPasses.h  ToyPasses.td  ToyTypes.td
toy/lib/: CMakeLists.txt  toy.cpp
toy/lib/Dataflow/: DataflowPass.cpp
toy/lib/Transforms/: CMakeLists.txt  ConvertToyToArith.cpp  DCE.cpp
toy/lib/conv/Conversion/: CMakeLists.txt
toy/lib/dly/: CMakeLists.txt  Dialect.cpp  MLIRGen.cpp
toy/lib/dly/Lowering/: CMakeLists.txt  LowerToAffineLoop.cpp  LowerToLLVM.cpp
toy/lib/dly/Passes/: CMakeLists.txt  ShapeInferencePass.cpp  TestDefUsePass.cpp
toy/lib/dly/Transforms/: CMakeLists.txt  DlyCombine.cpp
toy/lib/parser/: AST.cpp  CMakeLists.txt
toy/lib/toy/: toy.cpp
toy/tools/conv-opt/: CMakeLists.txt
toy/tools/dly-opt/: CMakeLists.txt  dly.cpp
toy/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
toy/tools/toyc/: CMakeLists.txt
tutorial/: canonicalize.toy  codegen.toy  test.sh
